Set LD_LIBRARY_PATH when running Python tools in-place.

--- a/Makefile.am
+++ b/Makefile.am
@@ -11,12 +11,14 @@ SUBDIRS = 						\
 
 run-pd-view:
 	GI_TYPELIB_PATH=$(top_builddir)/printerd \
+	LD_LIBRARY_PATH=$(top_builddir)/printerd/.libs:$$LD_LIBRARY_PATH \
 	DBUS_SESSION_BUS_ADDRESS=$$(cat printerd-session.bus) \
 	PD_USE_SESSION_BUS=1 \
 	$(PYTHON3) $(top_srcdir)/tools/pd-view.py
 
 run-ippd: printerd-session.pid
 	GI_TYPELIB_PATH=$(top_builddir)/printerd \
+	LD_LIBRARY_PATH=$(top_builddir)/printerd/.libs:$$LD_LIBRARY_PATH \
 	DBUS_SESSION_BUS_ADDRESS=$$(cat printerd-session.bus) \
 	PD_USE_SESSION_BUS=1 \
 	$(PYTHON3) $(top_srcdir)/ippd/ippd.py
